k8s/streama.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clone
spec:
  selector:
    matchLabels:
      run: clone
  replicas: 2
  template:
    metadata:
      labels:
        run: clone
    spec:
      containers:
      - name: clone
        image: ashraf1abdelrasool/clone:0.0.1-SNAPSHOT
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: clone
  labels:
    run: clone
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
# type: ClusterIP
#  type: NodePort
  type: LoadBalancer
  selector:
    run: clone
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: clone
  labels:
    run: clone
spec:
  to:
    kind: Service
    name: clone
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      run: gateway
  replicas: 1
  template:
    metadata:
      labels:
        run: gateway
    spec:
      containers:
      - name: gateway
        image: ashraf1abdelrasool/gateway:0.0.1-SNAPSHOT
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    run: gateway
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
#  type: ClusterIP
#  type: NodePort
  type: LoadBalancer
  selector:
    run: gateway
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gateway
  labels:
    run: gateway
spec:
  to:
    kind: Service
    name: gateway
